2004-05-23  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* ChangeLog.2002: Split older ChangeLog entries off into a
	separate file.
	* doc/bindtags.n: Added example.

	* tests/*.test: Many minor fixes aiming towards making the Tk test
	suite have better style.  (A very large fraction of test files
	were modified.)

	* generic/tkVisual.c (Tk_GetVisual): Minor fix for error message.

2004-05-14  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/msgbox.tcl (MessageBox): Added TIP#152's -detail option
	for Unix/X11 platforms.  Also shrank the size of the main -message
	text which was grossly large.

2004-05-12  Chengye Mao <chengye.geo@yahoo.com>
        * generic/tkBind.c <HandleEventGenerate>: Modified to fix wish
        crach due to incorrectly generate <Destroy> event. This bug was
        reported in comp.lang.tcl but not logged.

2004-05-07  Chengye Mao <chengye.geo@yahoo.com>
        * win/tkWinWm.c <UpdateWrapper>: handle and destroy old wrapper
        correctly and fix crash problem in wish exiting [Bug 767176].

2004-05-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinFont.c (FindSubFontForChar): corrections to dkf patch
	to handle subFontPtrPtr in EnumFontFamilies callback.

2004-05-05  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* win/tkWinFont.c (Tk_MeasureChars,Tk_DrawChars,etc): Make sure
	that the lastSubFontPtr remains valid even when the subfont array
	is reallocated. [Bug 618872]

2004-05-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tkUnixButton.c (TkpDrawCheckIndicator): allow radiobuttons
	to be drawn when disabledforeground and/or selectcolor are NULL.
	[Bug #826850] (griffin)

	* win/tkWinMenu.c, unix/tkUnixMenu.c (DrawMenuEntryLabel): place
	images of compound menu entries in indicator space if not a radio
	of checkbutton. [Bug #756952] (eserte)

	* win/tkWinX.c:                fix drawing of unicode chars in menu
	* win/tkWinInt.h (TkWinProcs): titles. [Bug #904371] (riefenstahl)